# learned_index_benchmark

./: .gitmodules  CMakeLists.txt  README.md
script/: build.sh  gen_data.sh  gen_datashift.py  get_pgm.sh  lr_mse.py  main_get_pgm.sh  outlier.py  run.sh  util.sh
src/benchmark/: benchmark.h  pgm_metric.h
src/competitor/: competitor.h  indexInterface.h  stat.h
src/competitor/alex/: alex.h
src/competitor/alex/src/: alex.h
src/competitor/alexol/: alex.h
src/competitor/alexol/src/: alex.h  alex_base.h  alex_nodes.h
src/competitor/art/: art.h
src/competitor/art/src/src/: CMakeLists.txt  art.c  art.h
src/competitor/artolc_old/: ARTOLC.h
src/competitor/artolc_old/src/: CMakeLists.txt  Key.h  example.cpp
src/competitor/artsync/: artolc.h  artunsync.h  test.cpp
src/competitor/btree/: btree.h
src/competitor/btree/src/include/stx/: btree.h
src/competitor/btreeolc/: btreeolc.h
src/competitor/btreeolc/src/: BTreeOLC_child_layout.h
src/competitor/hot/: hot.h  hotrowex.h
src/competitor/hot/src/hot/: CMakeLists.txt
src/competitor/hot/src/hot/rowex/: CMakeLists.txt
src/competitor/hot/src/hot/rowex/include/hot/rowex/: EpochBasedMemoryReclamationStrategy.hpp  HOTRowex.hpp  HOTRowexInsertStack.hpp  ThreadSpecificEpochBasedReclamationInformation.hpp
src/competitor/hot/src/idx/: CMakeLists.txt
src/competitor/lipp/: lipp.h
src/competitor/lippol/: lippol.h
src/competitor/masstree/: masstree.h
src/competitor/pgm/: pgm.h
src/competitor/pgm/src/: pgm_index.hpp  pgm_index_dynamic.hpp
src/competitor/wormhole_u64/: wormhole_u64.h
src/competitor/xindex/: xindex.h
